--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
     <head>
         <meta charset="utf-8">
-        <title>HighTech - IT Solutions Website Template</title>
+        <title>Four Miracle - IT Solutions Website Template</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
         <meta content="" name="keywords">
         <meta content="" name="description">
@@ -59,7 +59,7 @@
             <div class="container">
                 <nav class="navbar navbar-dark navbar-expand-lg py-0">
                     <a href="index.html" class="navbar-brand">
-                        <h1 class="text-white fw-bold d-block">High<span class="text-secondary">Tech</span> </h1>
+                        <h1 class="text-white fw-bold d-block">Four<span class="text-secondary">Miracle</span> </h1>
                     </a>
                     <button type="button" class="navbar-toggler me-0" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                         <span class="navbar-toggler-icon"></span>
@@ -84,7 +84,7 @@
                         </div>
                         <div class="d-flex flex-column pe-4 border-end">
                             <span class="text-white-50">Have any questions?</span>
-                            <span class="text-secondary">Call: + 0302  456 7890</span>
+                            <span class="text-secondary">Call: +91 9016900373</span>
                         </div>
                         <div class="d-flex align-items-center justify-content-center ms-4 ">
                             <a href="#"><i class="bi bi-search text-white fa-2x"></i> </a>
@@ -160,7 +160,7 @@
                     <div class="col-lg-3 wow fadeIn" data-wow-delay=".5s">
                         <div class="d-flex counter">
                             <h1 class="me-3 text-primary counter-value">120</h1>
-                            <h5 class="text-white mt-1">Total clients who love HighTech</h5>
+                            <h5 class="text-white mt-1">Total clients who love Four Miracle</h5>
                         </div>
                     </div>
                     <div class="col-lg-3 wow fadeIn" data-wow-delay=".7s">
@@ -189,9 +189,16 @@
                     </div>
                     <div class="col-lg-7 col-md-6 col-sm-12 wow fadeIn" data-wow-delay=".5s">
                         <h5 class="text-primary">About Us</h5>
-                        <h1 class="mb-4">About HighTech Agency And It's Innovative IT Solutions</h1>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed efficitur quis purus ut interdum. Pellentesque aliquam dolor eget urna ultricies tincidunt. Nam volutpat libero sit amet leo cursus, ac viverra eros tristique. Morbi quis quam mi. Cras vel gravida eros. Proin scelerisque quam nec elementum viverra. Suspendisse viverra hendrerit diam in tempus. Etiam gravida justo nec erat vestibulum, et malesuada augue laoreet.</p>
-                        <p class="mb-4">Pellentesque aliquam dolor eget urna ultricies tincidunt. Nam volutpat libero sit amet leo cursus, ac viverra eros tristique. Morbi quis quam mi. Cras vel gravida eros. Proin scelerisque quam nec elementum viverra. Suspendisse viverra hendrerit diam in tempus.</p>
+                        <h1 class="mb-4">About Four Miracle Agency And It's Innovative IT Solutions</h1>
+                        <p>
+                            At Four Miracle Infoweb Solution, we are passionate about transforming ideas into powerful digital solutions. As a leading IT company, we specialize in web development, mobile application development, and Odoo ERP implementation, helping businesses of all sizes streamline operations and achieve sustainable growth through technology.
+                        </p>
+                        <p class="mb-4">
+                            Founded with a vision to deliver excellence and innovation, Four Miracle Infoweb Solution combines creativity, technical expertise, and strategic thinking to provide end-to-end IT services. Our team of skilled professionals ensures every project we deliver is not just functional, but also scalable, secure, and user-friendly.
+                        </p>
+                        <p>
+                            We take pride in building long-term relationships with our clients by understanding their business needs and crafting customized digital solutions that drive results. Whether you need a responsive website, a cross-platform mobile app, or a fully integrated Odoo ERP system, we have the experience and dedication to make it happen.
+                        </p>
                         <a href="" class="btn btn-secondary rounded-pill px-5 py-3 text-white">More Details</a>
                     </div>
                 </div>
@@ -214,7 +221,7 @@
                                 <div class="services-content-icon">
                                     <i class="fa fa-code fa-7x mb-4 text-primary"></i>
                                     <h4 class="mb-3">Web Design</h4>
-                                    <p class="mb-4">Lorem ipsum dolor sit amet elit. Sed efficitur quis purus ut interdum. Aliquam dolor eget urna ultricies tincidunt.</p>
+                                    <p class="mb-4">We create modern, responsive, and user-friendly websites that bring your brand to life and deliver an exceptional digital experience.</p>
                                     <a href="" class="btn btn-secondary text-white px-5 py-3 rounded-pill">Read More</a>
                                 </div>
                             </div>
@@ -226,7 +233,7 @@
                                 <div class="services-content-icon">
                                     <i class="fa fa-file-code fa-7x mb-4 text-primary"></i>
                                     <h4 class="mb-3">Web Development</h4>
-                                    <p class="mb-4">Lorem ipsum dolor sit amet elit. Sed efficitur quis purus ut interdum. Aliquam dolor eget urna ultricies tincidunt.</p>
+                                    <p class="mb-4">We build powerful, scalable, and high-performance web applications tailored to your business needs with the latest technologies and best practices.</p>
                                     <a href="" class="btn btn-secondary text-white px-5 py-3 rounded-pill">Read More</a>
                                 </div>
                             </div>
@@ -238,7 +245,7 @@
                                 <div class="services-content-icon">
                                     <i class="fa fa-external-link-alt fa-7x mb-4 text-primary"></i>
                                     <h4 class="mb-3">UI/UX Design</h4>
-                                    <p class="mb-4">Lorem ipsum dolor sit amet elit. Sed efficitur quis purus ut interdum. Aliquam dolor eget urna ultricies tincidunt.</p>
+                                    <p class="mb-4">We craft intuitive and visually appealing user interfaces that enhance user experience, engagement, and satisfaction across all platforms.</p>
                                     <a href="" class="btn btn-secondary text-white px-5 py-3 rounded-pill">Read More</a>
                                 </div>
                             </div>
@@ -249,8 +256,8 @@
                             <div class="p-4 text-center services-content">
                                 <div class="services-content-icon">
                                     <i class="fas fa-user-secret fa-7x mb-4 text-primary"></i>
-                                    <h4 class="mb-3">Web Cecurity</h4>
-                                    <p class="mb-4">Lorem ipsum dolor sit amet elit. Sed efficitur quis purus ut interdum. Aliquam dolor eget urna ultricies tincidunt.</p>
+                                    <h4 class="mb-3">Odoo implementation</h4>
+                                    <p class="mb-4">We provide complete Odoo ERP implementation and customization to streamline your business processes, boost efficiency, and enhance productivity.</p>
                                     <a href="" class="btn btn-secondary text-white px-5 py-3 rounded-pill">Read More</a>
                                 </div>
                                 
@@ -262,8 +269,8 @@
                             <div class="p-4 text-center services-content">
                                 <div class="services-content-icon">
                                     <i class="fa fa-envelope-open fa-7x mb-4 text-primary"></i>
-                                    <h4 class="mb-3">Digital Marketing</h4>
-                                    <p class="mb-4">Lorem ipsum dolor sit amet elit. Sed efficitur quis purus ut interdum. Aliquam dolor eget urna ultricies tincidunt.</p>
+                                    <h4 class="mb-3">Mobile Applocation</h4>
+                                    <p class="mb-4">We develop high-quality, user-friendly mobile applications for Android and iOS that deliver seamless performance and elevate your digital presence.</p>
                                     <a href="" class="btn btn-secondary text-white px-5 py-3 rounded-pill">Read More</a>
                                 </div>
                             </div>
@@ -275,7 +282,7 @@
                                 <div class="services-content-icon">
                                     <i class="fas fa-laptop fa-7x mb-4 text-primary"></i>
                                     <h4 class="mb-3">Programming</h4>
-                                    <p class="mb-4">Lorem ipsum dolor sit amet elit. Sed efficitur quis purus ut interdum. Aliquam dolor eget urna ultricies tincidunt.</p>
+                                    <p class="mb-4">We deliver clean, efficient, and scalable programming solutions tailored to your project needs using modern technologies and best coding practices.</p>
                                     <a href="" class="btn btn-secondary text-white px-5 py-3 rounded-pill">Read More</a>
                                 </div>
                             </div>
@@ -432,7 +439,7 @@
                                 </div>
                                 <div class="ms-3">
                                     <h4 class="text-primary">Email Us</h4>
-                                    <a class="h5" href="mailto:info@example.com" target="_blank">info@example.com</a>
+                                    <a class="h5" href="mailto:joshinikhil404@gmail.com" target="_blank">joshinikhil404@gmail.com</a>
                                 </div>
                             </div>
                         </div>
@@ -476,7 +483,7 @@
                 <div class="row g-5">
                     <div class="col-lg-3 col-md-6">
                         <a href="index.html">
-                            <h1 class="text-white fw-bold d-block">High<span class="text-secondary">Tech</span> </h1>
+                            <h1 class="text-white fw-bold d-block">Four<span class="text-secondary">Miracle</span> </h1>
                         </a>
                         <p class="mt-4 text-light">Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta facere delectus qui placeat inventore consectetur repellendus optio debitis.</p>
                         <div class="d-flex hightech-link">
